syntax = "proto3";

package sale_service;
option go_package = "genproto/sale_service";


service SaleService {
  rpc Create(CreateSaleRequest) returns (IdResponse) {}
  rpc Get(IdRequest) returns (GetSaleResponse) {}
  rpc GetAll(GetAllSaleRequest) returns (GetAllSaleResponse) {}
  rpc Update(UpdateSaleRequest) returns (Response) {}
  rpc Delete(IdRequest) returns (Response) {}
}

message CreateSaleRequest {
  string id =1;
  string branch_Id = 2;
  string shop_assistant_Id = 3;
  string cashier_id = 4;
  float price = 5;
  string payment_type =6;
  string client_name=7;

}

message Sale {
    string id =1;
    string branch_Id = 2;
    string shop_assistant_Id = 3;
    string cashier_id = 4;
    float  price = 5;
    string payment_type =6;
    string status =7;
    string client_name=8;
    string created_at = 9;
    string updated_at = 10;
}

message IdResponse {
  string id = 1;
}

message UpdateSaleRequest {
    string id =1;
    string branch_Id = 2;
    string shop_assistant_Id = 3;
    string cashier_id = 4;
    float price = 5;
    string payment_type =6;
    string status =7;
    string client_name=8;
}

message GetSaleResponse {
  Sale sale = 1;
}

message GetAllSaleRequest {
  int32 limit = 1;
  int32 offset = 2;
  string search = 3;
  string branch_Id = 4;
  string payment_type =5;
  string shop_assistant_Id = 6;
  string cashier_id = 7;
  string createdAtFrom = 8;
  string createdAtTo = 9;
}

message GetAllSaleResponse {
  repeated Sale sales = 1;
  int32 count = 2;
}

message Response {
  string message = 1;
}

message IdRequest {
  string id = 1;
}